# ufo

./: .clang-format-ignore  .clang-tidy  CMakeLists.txt  Doxyfile.in  pixi.toml
lib/cloud/: CMakeLists.txt  README.md  package.xml
lib/cloud/cmake/: ufocloudConfig.cmake.in  ufopclConfig.cmake.in
lib/cloud/include/happly/: happly.h
lib/cloud/include/ufo/cloud/: cloud.hpp  ply.hpp  point_cloud.hpp
lib/cloud/include/ufo/pcl/: cloud.hpp  point_cloud.hpp  ufo.hpp
lib/cloud/tests/: CMakeLists.txt  cloud_test.cpp
lib/compute/: CMakeLists.txt  README.md  package.xml
lib/compute/cmake/: Compute-config.cmake.in  ComputeConfig.cmake.in  ufocomputeConfig.cmake.in
lib/compute/docs/: CMakeLists.txt
lib/compute/include/ufo/compute/: compute.hpp
lib/compute/src/: compute.cpp
lib/compute/tests/: CMakeLists.txt  compute_test.cpp
lib/container/: CMakeLists.txt  README.md  package.xml
lib/container/1stparty/: CMakeLists.txt
lib/container/1stparty/geometry/: geometry.cmake
lib/container/1stparty/morton/: morton.cmake
lib/container/1stparty/ufogeometry/: ufogeometry.cmake
lib/container/cmake/: Container-config.cmake.in  ufocontainerConfig.cmake.in
lib/container/include/ufo/container/: binary_tree_map.hpp  binary_tree_set.hpp  hextree_map.hpp  hextree_set.hpp  octree_map.hpp  octree_set.hpp  quadtree_map.hpp  quadtree_set.hpp  range.hpp  range_map.hpp  range_set.hpp  small_vector.hpp  structure_of_arrays.hpp  tree_map.hpp  tree_set.hpp
lib/container/tests/: CMakeLists.txt  hextree_set_test.cpp  octree_map_test.cpp  octree_set_test.cpp  octree_test.cpp  predicate_test.cpp  quadtree_set_test.cpp  range_test.cpp  test_tree.hpp  tree_index_test.cpp  tree_node_test.cpp
lib/core/: CMakeLists.txt  README.md  package.xml
lib/core/1stparty/: CMakeLists.txt
lib/core/cmake/: Core-config.cmake.in  ufocoreConfig.cmake.in
lib/core/include/ufo/core/: color.hpp  image.hpp  intensity.hpp  label.hpp  semantic.hpp  surfel.hpp
lib/core/tests/: CMakeLists.txt  color_test.cpp  intensity_test.cpp
lib/execution/: CMakeLists.txt  package.xml
lib/execution/cmake/: Execution-config.cmake.in
lib/execution/include/ufo/execution/: algorithm copy.hpp  algorithm.hpp  execution.hpp
lib/execution/tests/: CMakeLists.txt  execution_test.cpp
lib/geometry/: CMakeLists.txt  README.md  package.xml
lib/geometry/1stparty/math/: math.cmake
lib/geometry/cmake/: Geometry-config.cmake.in  ufogeometryConfig.cmake.in
lib/geometry/include/ufo/geometry/: aabb.hpp  aabc.hpp  aabs.hpp  aabt.hpp  box.hpp  capsule.hpp  closest_point.hpp  cone.hpp  contains.hpp  cylinder.hpp  disjoint.hpp  distance.hpp  dynamic_geometry.hpp  frustum.hpp  fun.hpp  geometry.hpp  inside.hpp  intersects.hpp  line.hpp  line_segment.hpp  obb.hpp  oriented_box.hpp  plane.hpp  point.hpp  ray.hpp  sphere.hpp  triangle.hpp
lib/geometry/tests/: CMakeLists.txt  aabb_test.cpp  frustum_test.cpp  line_test.cpp
lib/map/: .gitignore  CMakeLists.txt  coverage.sh  info.md  package.xml
lib/map/.github/: labeler.yml
lib/map/.github/workflows/: cmake.yml  greetings.yml  stale.yml
lib/map/1stparty/: CMakeLists.txt
lib/map/1stparty/cloud/: cloud.cmake
lib/map/1stparty/compression/: compression.cmake
lib/map/1stparty/compute/: compute.cmake
lib/map/1stparty/core/: core.cmake
lib/map/1stparty/geometry/: geometry.cmake
lib/map/1stparty/time/: time.cmake
lib/map/1stparty/vision/: vision.cmake
lib/map/apps/: CMakeLists.txt
lib/map/apps/dufomap/: CMakeLists.txt  dufomap.cpp  fix_pcd.cpp
lib/map/cmake/: Map-config.cmake.in  ufomapConfig.cmake.in
lib/map/include/ufo/map/: block.hpp  header.hpp  map_full.hpp  type.hpp  ufomap.hpp  utility.hpp
lib/map/src/: distance_2d_lut_gen.cpp  render.cpp  render2d.cpp  render4d.cpp  seen_empty_footer.hpp  seen_empty_generator.cpp  seen_empty_header.hpp  test.txt  toml.hpp  ufomap.cpp
lib/map/tests/: CMakeLists.txt  integration_test.cpp  labels_map_test.cpp  map_test.cpp  occupancy_map_test.cpp  semantic_map_test.cpp
lib/math/: CMakeLists.txt
lib/math/tests/: CMakeLists.txt  transform3_test.cpp  vec2_test.cpp  vec3_test.cpp
lib/morton/: CMakeLists.txt  LICENSE  README.md  package.xml
lib/morton/1stparty/: CMakeLists.txt
lib/morton/cmake/: Morton-config.cmake.in  ufomortonConfig.cmake.in
lib/morton/tests/: CMakeLists.txt  morton1_test.cpp  morton2_test.cpp  morton3_test.cpp  morton4_test.cpp
lib/plan/: .gitignore  CMakeLists.txt  README.md  package.xml
lib/plan/1stparty/: CMakeLists.txt
lib/plan/1stparty/container/: container.cmake
lib/plan/1stparty/map/: map.cmake
lib/plan/1stparty/math/: math.cmake
lib/plan/cmake/: Plan-config.cmake.in  ufoplanConfig.cmake.in
lib/plan/include/plan/: edge.hpp  node.hpp  path.hpp
lib/plan/tests/: CMakeLists.txt  plan_test.cpp
lib/time/: CMakeLists.txt  README.md  package.xml
lib/time/cmake/: Time-config.cmake.in  ufotimeConfig.cmake.in
lib/time/docs/: CMakeLists.txt
lib/time/src/: timer.cpp  timing.cpp
lib/time/tests/: CMakeLists.txt  timer_test.cpp  timing_test.cpp
lib/utility/: .gitignore  CMakeLists.txt  README.md  package.xml  super.cmake
lib/utility/cmake/: ufoutilityConfig.cmake.in
lib/utility/src/: compression.cpp  timer.cpp  timing.cpp
lib/utility/src/io/: buffer.cpp  read_buffer.cpp  write_buffer.cpp
lib/utility/tests/: CMakeLists.txt  compression_test.cpp  iterator_wrapper_test.cpp  timer_test.cpp  timing_test.cpp
lib/vision/: CMakeLists.txt  README.md  package.xml
lib/vision/cmake/: Vision-config.cmake.in  ufovisionConfig.cmake.in
lib/vision/tests/: CMakeLists.txt
lib/viz/: CMakeLists.txt  README.md  package.xml
lib/viz/1stparty/: CMakeLists.txt
lib/viz/apps/: CMakeLists.txt
lib/viz/apps/ufoviz/: CMakeLists.txt
lib/viz/cmake/: Viz-config.cmake.in
lib/viz/glfw_webgpu/: CMakeLists.txt
lib/viz/glfw_webgpu/src/: glfw_surface.c
lib/viz/shaders/: clear.wgsl  fullscreen_textured_quad.wgsl  map_ray_trace_3d.wgsl  render.wgsl
lib/viz/src/: load_shader_module.cpp  viz.cpp
lib/viz/tests/: CMakeLists.txt  map_test.cpp  path_test.cpp  viz_test.cpp
tests/: CMakeLists.txt
(+333 files in other folders)
