<?xml version="1.0"?>
<package format="2">
  <name>ufocloud</name>
  <version>1.0.0</version>
  <description>The ufocloud package</description>

  <author email="dduberg@kth.se">Daniel Duberg</author>
  <maintainer email="dduberg@kth.se">Daniel Duberg</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/UnknownFreeOccupied/ufocloud</url>

  <buildtool_depend>cmake</buildtool_depend>
  
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
