option(UFOCORE_BUILD_DOCS     "Generate documentation" OFF)
option(UFOCORE_BUILD_TESTS    "Unit testing"           OFF)
option(UFOCORE_BUILD_COVERAGE "Test Coverage"          OFF)

include(GNUInstallDirs)

add_library(Core INTERFACE)
add_library(UFO::Core ALIAS Core)

target_link_libraries(Core 
	INTERFACE 
		UFO::Math
)

target_include_directories(Core 
	INTERFACE
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
		$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDEDIR}>
)

if(UFO_BUILD_TESTS OR UFOCORE_BUILD_TESTS)
  add_subdirectory(tests)
endif()

if(UFO_BUILD_DOCS OR UFOCORE_BUILD_DOCS)
	add_subdirectory(docs)
endif()

install(TARGETS Core 
	EXPORT UFO-targets
	COMPONENT Core
	LIBRARY  DESTINATION ${CMAKE_INSTALL_LIBDIR}
	ARCHIVE  DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME  DESTINATION ${CMAKE_INSTALL_BINDIR}
  INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)

install(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/include/
	COMPONENT Core
	DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
)